--- a/Datenschutzerklärung.html
+++ b/Datenschutzerklärung.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-05-08 So 14:35 -->
+<!-- 2023-12-09 Sa 20:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Datenschutzerklärung</title>
@@ -201,7 +201,7 @@
 <div id="content" class="content">
 <h1 class="title">Datenschutzerklärung</h1>
 
-<div id="org5fc5361" class="figure">
+<div id="org092dfa3" class="figure">
 <p><img src="Stammeslogo2.png" alt="Stammeslogo2.png" />
 </p>
 </div>
@@ -238,11 +238,9 @@ Zu den verarbeiteten Daten zählen:
 <p>
 Wir werden die Daten löschen, sobald die Speicherung nicht mehr erforderlich ist oder die Verarbeitung einschränken, falls gesetzliche Aufbewahrungspflichten bestehen.
 </p>
-
-
-<div id="outline-container-orge403ee4" class="outline-2">
-<h2 id="orge403ee4">Betroffenenrechte</h2>
-<div class="outline-text-2" id="text-orge403ee4">
+<div id="outline-container-org0948ff0" class="outline-2">
+<h2 id="org0948ff0">Betroffenenrechte</h2>
+<div class="outline-text-2" id="text-org0948ff0">
 <p>
 Du hast als betroffene Person, das Recht auf Auskunft, das Recht auf Berichtigung oder Löschung, das Recht auf Einschränkung der Verarbeitung und das Recht auf Widerspruch gegen die Verarbeitung deiner Daten.
 Bitte richte deinen Widerspruch formlos an oben genannte Adresse.
@@ -254,11 +252,9 @@ Darüber hinaus hast du das Recht auf Datenübertragbarkeit. Du hast weiter das 
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-org20b927f" class="outline-2">
-<h2 id="org20b927f">Hosting</h2>
-<div class="outline-text-2" id="text-org20b927f">
+<div id="outline-container-orgb84306c" class="outline-2">
+<h2 id="orgb84306c">Hosting</h2>
+<div class="outline-text-2" id="text-orgb84306c">
 <p>
 Unser Hoster erhebt in sog. Logfiles folgende Daten, die Ihr Browser übermittelt:
 </p>
@@ -301,21 +297,17 @@ GitHub hat Compliance-Maßnahmen für internationale Datenübermittlungen umgese
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orga3ca991" class="outline-2">
-<h2 id="orga3ca991">Rechtliche Hinweise</h2>
-<div class="outline-text-2" id="text-orga3ca991">
+<div id="outline-container-orgd9bc92f" class="outline-2">
+<h2 id="orgd9bc92f">Rechtliche Hinweise</h2>
+<div class="outline-text-2" id="text-orgd9bc92f">
 <p>
 Grundsätzlich ist ein Auftragsverarbeitungsvertrag mit dem Hoster abzuschließen. Das bayerische Landesamt für Datenschutzaufsicht hat für das Hosting rein statischer Websites eine Ausnahme gemacht. Für den Fall, dass die Webseite der Selbstdarstellung dient, z.B. von Vereinen oder Kleinunternehmen, keine personenbezogenen Daten an den Betreiber fließen und kein Tracking stattfindet, liegt keine Auftragsverarbeitung vor. Weiter heißt es: „Die Tatsache, dass auch beim Hosting von statischen Webseiten zwangsläufig IP-Adressen, d.h. personenbezogene Daten, verarbeitet werden müssen, führt nicht zur Annahme einer Auftragsverarbeitung. Das wäre nicht sachgerecht. Die (kurzfristige) IP-Adressenspeicherung ist vielmehr noch der TK-Zugangsvermittlung des Website-Hosters nach dem TKG zuzurechnen und dient in erster Linie Sicherheitszwecken des Hosters.“ (<a href="https://www.lda.bayern.de/media/veroeffentlichungen/FAQ_Hosting_keine_Auftragsverarbeitung.pdf">https://www.lda.bayern.de/media/veroeffentlichungen/FAQ_Hosting_keine_Auftragsverarbeitung.pdf</a>) Wir gehen davon aus, dass diese Ausnahme auf GitHub Pages anzuwenden ist.
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orgd50e744" class="outline-2">
-<h2 id="orgd50e744">Instagram</h2>
-<div class="outline-text-2" id="text-orgd50e744">
+<div id="outline-container-orgf7be6c8" class="outline-2">
+<h2 id="orgf7be6c8">Instagram</h2>
+<div class="outline-text-2" id="text-orgf7be6c8">
 <p>
 Auf unserer Webseite könnte ein Link eingebunden sein, der zu Instagram führt. Sofern die Nutzer Mitglieder der Plattform Instagram sind, kann Instagram den Aufruf der o.g. Inhalte und Funktionen den dortigen Profilen der Nutzer zuordnen.
 </p>
@@ -325,13 +317,11 @@ Datenschutzerklärung von Instagram <a href="https://instagram.com/about/legal/p
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-org8a3ea86" class="outline-2">
-<h2 id="org8a3ea86">Quellcode</h2>
-<div class="outline-text-2" id="text-org8a3ea86">
+<div id="outline-container-org25adbab" class="outline-2">
+<h2 id="org25adbab">Quellcode</h2>
+<div class="outline-text-2" id="text-org25adbab">
 <p>
-Der Quellcode von der Webseite ist auf GitHub einsehbar.
+Der Quellcode von dieser Webseite ist auf GitHub einsehbar.
 </p>
 
 <p>
@@ -342,7 +332,7 @@ Der Quellcode von der Webseite ist auf GitHub einsehbar.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: DPSG Stamm St. Pius Ingolstadt</p>
-<p class="date">Created: 2022-05-08 So 14:35</p>
+<p class="date">Created: 2023-12-09 Sa 20:27</p>
 </div>
 </body>
 </html>
