--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-05-08 So 10:54 -->
+<!-- 2023-12-10 So 11:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DPSG Stamm St. Pius Ingolstadt</title>
@@ -201,15 +201,13 @@
 <div id="content" class="content">
 <h1 class="title">DPSG Stamm St. Pius Ingolstadt</h1>
 
-<div id="org741f894" class="figure">
+<div id="orgb5aeb68" class="figure">
 <p><img src="Stammeslogo2.png" alt="Stammeslogo2.png" />
 </p>
 </div>
-
-
-<div id="outline-container-org515a115" class="outline-2">
-<h2 id="org515a115">Über uns</h2>
-<div class="outline-text-2" id="text-org515a115">
+<div id="outline-container-orgb39610e" class="outline-2">
+<h2 id="orgb39610e">Über uns</h2>
+<div class="outline-text-2" id="text-orgb39610e">
 <p>
 Der DPSG Stamm St. Pius in Ingolstadt wurde im Jahr 1962 gegründet und gehört zur katholischen Kirchengemeinde St. Pius im  Norden der Stadt.
 Dort befindet sich auch unser Gruppenraum, wo wir uns wöchentlich zur Gruppenstunde treffen.
@@ -226,22 +224,26 @@ Weitere Informationen gibt es auf Instagram:
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orge997366" class="outline-2">
-<h2 id="orge997366">Gruppenstunden</h2>
-<div class="outline-text-2" id="text-orge997366">
+<div id="outline-container-org1a8f8b9" class="outline-2">
+<h2 id="org1a8f8b9">Du hast Lust das mal näher kennenzulernen?</h2>
+<div class="outline-text-2" id="text-org1a8f8b9">
+<p>
+Am 6., 13. und 20. März 2023 gibt es Schnupperleiterrunden, wo man die Welt der Pfadfinder näher erleben kann.
+</p>
+</div>
+</div>
+<div id="outline-container-org176be0c" class="outline-2">
+<h2 id="org176be0c">Gruppenstunden</h2>
+<div class="outline-text-2" id="text-org176be0c">
 <ul class="org-ul">
-<li>Pfadfinder (ab 12 Jahren): Dienstag 18:30 - 20:00 Uhr</li>
+<li>Wölflinge (ab 6 Jahren): Dienstag  17:30 - 19:00 Uhr</li>
 <li>Rover (ab 15 Jahren): Donnerstag  20:30 - 22:00 Uhr</li>
 </ul>
 </div>
 </div>
-
-
-<div id="outline-container-orgb722ac3" class="outline-2">
-<h2 id="orgb722ac3">Anmeldung</h2>
-<div class="outline-text-2" id="text-orgb722ac3">
+<div id="outline-container-org320ceb5" class="outline-2">
+<h2 id="org320ceb5">Anmeldung</h2>
+<div class="outline-text-2" id="text-org320ceb5">
 <p>
 Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte Version an die E-Mail-Adresse.
 </p>
@@ -251,38 +253,34 @@ Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte 
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orgbc1833a" class="outline-2">
-<h2 id="orgbc1833a"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
+<div id="outline-container-org25b825b" class="outline-2">
+<h2 id="org25b825b"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
 </div>
 
 
-<div id="outline-container-org60a1a5e" class="outline-2">
-<h2 id="org60a1a5e">Kontakt</h2>
-<div class="outline-text-2" id="text-org60a1a5e">
+<div id="outline-container-orga48a95b" class="outline-2">
+<h2 id="orga48a95b">Kontakt</h2>
+<div class="outline-text-2" id="text-orga48a95b">
 <p>
-E-Mail: stamm.pius@dpsg-eichstaett.de
+stamm.pius@dpsg-eichstaett.de
 </p>
 </div>
 </div>
-
-
-<div id="outline-container-orga7366fd" class="outline-2">
-<h2 id="orga7366fd">Impressum</h2>
-<div class="outline-text-2" id="text-orga7366fd">
+<div id="outline-container-orgddd1ee4" class="outline-2">
+<h2 id="orgddd1ee4">Impressum</h2>
+<div class="outline-text-2" id="text-orgddd1ee4">
 <p>
 Angaben gemäß § 5 TMG
 </p>
 
 <ul class="org-ul">
 <li>DPSG Stamm St. Pius Ingolstadt</li>
-<li>Richard-Wagner-Starße 26</li>
+<li>Richard-Wagner-Straße 26</li>
 <li>85057 Ingolstadt</li>
 </ul>
 
 <p>
-Vertretung durch den Stammesvorstand: Jonas Engelbrecht
+Vertretung durch den Stammesvorstand: Jonas Engelbrecht und Jakob Neufanger
 </p>
 
 <p>
@@ -291,15 +289,15 @@ Adresse des Stammesvorstands
 
 <ul class="org-ul">
 <li>Jonas Engelbrecht</li>
-<li>Richard-Strauss-Straße 71A</li>
-<li>85057 Ingolstadt</li>
+<li>Oberer Graben 63</li>
+<li>85049 Ingolstadt</li>
 </ul>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: DPSG Stamm St. Pius Ingolstadt</p>
-<p class="date">Created: 2022-05-08 So 10:54</p>
+<p class="date">Created: 2023-12-10 So 11:04</p>
 </div>
 </body>
 </html>
