--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-12-10 So 11:04 -->
+<!-- 2024-02-18 So 10:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DPSG Stamm St. Pius Ingolstadt</title>
@@ -201,13 +201,13 @@
 <div id="content" class="content">
 <h1 class="title">DPSG Stamm St. Pius Ingolstadt</h1>
 
-<div id="orgb5aeb68" class="figure">
+<div id="orgf09b702" class="figure">
 <p><img src="Stammeslogo2.png" alt="Stammeslogo2.png" />
 </p>
 </div>
-<div id="outline-container-orgb39610e" class="outline-2">
-<h2 id="orgb39610e">Über uns</h2>
-<div class="outline-text-2" id="text-orgb39610e">
+<div id="outline-container-orgee73156" class="outline-2">
+<h2 id="orgee73156">Über uns</h2>
+<div class="outline-text-2" id="text-orgee73156">
 <p>
 Der DPSG Stamm St. Pius in Ingolstadt wurde im Jahr 1962 gegründet und gehört zur katholischen Kirchengemeinde St. Pius im  Norden der Stadt.
 Dort befindet sich auch unser Gruppenraum, wo wir uns wöchentlich zur Gruppenstunde treffen.
@@ -224,26 +224,28 @@ Weitere Informationen gibt es auf Instagram:
 </p>
 </div>
 </div>
-<div id="outline-container-org1a8f8b9" class="outline-2">
-<h2 id="org1a8f8b9">Du hast Lust das mal näher kennenzulernen?</h2>
-<div class="outline-text-2" id="text-org1a8f8b9">
-<p>
-Am 6., 13. und 20. März 2023 gibt es Schnupperleiterrunden, wo man die Welt der Pfadfinder näher erleben kann.
+<div id="outline-container-org3b1f11a" class="outline-2">
+<h2 id="org3b1f11a">Du hast Lust das mal näher kennenzulernen?</h2>
+<div class="outline-text-2" id="text-org3b1f11a">
+
+<div id="orgcbc4fa3" class="figure">
+<p><img src="Plakat.png" alt="Plakat.png" />
 </p>
 </div>
 </div>
-<div id="outline-container-org176be0c" class="outline-2">
-<h2 id="org176be0c">Gruppenstunden</h2>
-<div class="outline-text-2" id="text-org176be0c">
+</div>
+<div id="outline-container-org20be8fb" class="outline-2">
+<h2 id="org20be8fb">Gruppenstunden</h2>
+<div class="outline-text-2" id="text-org20be8fb">
 <ul class="org-ul">
 <li>Wölflinge (ab 6 Jahren): Dienstag  17:30 - 19:00 Uhr</li>
 <li>Rover (ab 15 Jahren): Donnerstag  20:30 - 22:00 Uhr</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org320ceb5" class="outline-2">
-<h2 id="org320ceb5">Anmeldung</h2>
-<div class="outline-text-2" id="text-org320ceb5">
+<div id="outline-container-orgf66eea8" class="outline-2">
+<h2 id="orgf66eea8">Anmeldung</h2>
+<div class="outline-text-2" id="text-orgf66eea8">
 <p>
 Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte Version an die E-Mail-Adresse.
 </p>
@@ -253,22 +255,22 @@ Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte 
 </p>
 </div>
 </div>
-<div id="outline-container-org25b825b" class="outline-2">
-<h2 id="org25b825b"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
+<div id="outline-container-org2a6c958" class="outline-2">
+<h2 id="org2a6c958"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
 </div>
 
 
-<div id="outline-container-orga48a95b" class="outline-2">
-<h2 id="orga48a95b">Kontakt</h2>
-<div class="outline-text-2" id="text-orga48a95b">
+<div id="outline-container-org9834038" class="outline-2">
+<h2 id="org9834038">Kontakt</h2>
+<div class="outline-text-2" id="text-org9834038">
 <p>
 stamm.pius@dpsg-eichstaett.de
 </p>
 </div>
 </div>
-<div id="outline-container-orgddd1ee4" class="outline-2">
-<h2 id="orgddd1ee4">Impressum</h2>
-<div class="outline-text-2" id="text-orgddd1ee4">
+<div id="outline-container-orgad2c959" class="outline-2">
+<h2 id="orgad2c959">Impressum</h2>
+<div class="outline-text-2" id="text-orgad2c959">
 <p>
 Angaben gemäß § 5 TMG
 </p>
@@ -297,7 +299,7 @@ Adresse des Stammesvorstands
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: DPSG Stamm St. Pius Ingolstadt</p>
-<p class="date">Created: 2023-12-10 So 11:04</p>
+<p class="date">Created: 2024-02-18 So 10:32</p>
 </div>
 </body>
 </html>
