--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-18 So 10:32 -->
+<!-- 2024-03-11 Mo 10:35 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DPSG Stamm St. Pius Ingolstadt</title>
@@ -201,13 +201,13 @@
 <div id="content" class="content">
 <h1 class="title">DPSG Stamm St. Pius Ingolstadt</h1>
 
-<div id="orgf09b702" class="figure">
+<div id="orgb9df4c3" class="figure">
 <p><img src="Stammeslogo2.png" alt="Stammeslogo2.png" />
 </p>
 </div>
-<div id="outline-container-orgee73156" class="outline-2">
-<h2 id="orgee73156">Über uns</h2>
-<div class="outline-text-2" id="text-orgee73156">
+<div id="outline-container-orgd18940e" class="outline-2">
+<h2 id="orgd18940e">Über uns</h2>
+<div class="outline-text-2" id="text-orgd18940e">
 <p>
 Der DPSG Stamm St. Pius in Ingolstadt wurde im Jahr 1962 gegründet und gehört zur katholischen Kirchengemeinde St. Pius im  Norden der Stadt.
 Dort befindet sich auch unser Gruppenraum, wo wir uns wöchentlich zur Gruppenstunde treffen.
@@ -224,28 +224,40 @@ Weitere Informationen gibt es auf Instagram:
 </p>
 </div>
 </div>
-<div id="outline-container-org3b1f11a" class="outline-2">
-<h2 id="org3b1f11a">Du hast Lust das mal näher kennenzulernen?</h2>
-<div class="outline-text-2" id="text-org3b1f11a">
-
-<div id="orgcbc4fa3" class="figure">
-<p><img src="Plakat.png" alt="Plakat.png" />
+<div id="outline-container-orge8313da" class="outline-2">
+<h2 id="orge8313da">Leiten bei den Pfadfindern?</h2>
+<div class="outline-text-2" id="text-orge8313da">
+<p>
+<img src="Plakat.png" alt="Plakat.png" />
+<img src="Plakat2.png" alt="Plakat2.png" />
+<img src="Plakat3.png" alt="Plakat3.png" />
 </p>
 </div>
 </div>
+<div id="outline-container-orgcd996ee" class="outline-2">
+<h2 id="orgcd996ee">Du hast Lust das mal näher kennenzulernen?</h2>
+<div class="outline-text-2" id="text-orgcd996ee">
+<p>
+Die DPSG-Pfadfinderschaft St.Pius lädt Dich ein, die Rolle des Pfadfinderleiters vertieft kennenzulernen. Einen Monat lang werden wir uns wöchentlich damit beschäftigen, wie ein Pfadfinderleiter jungen Menschen im Zugang zur eigenen Persönlichkeit und die Entwicklung zu der Person, die in Ihnen angelegt ist, unterstützt. Dabei lernst Du neben Persönlichkeits- und Gruppentheorien auch praktische Elemente kennen, um den Weg des Grüpplings zu begleiten. Natürlich sollst Du nach unserer Schnupperleiterrunde nicht die Verantwortung eines Pfadfinderleiters voll übernehmen können - dazu gibt es weiterführende Qualifikationen. Hier geht es - wie der Name schon sagt - um ein Schnuppern!
+</p>
+
+<p>
+Wir freuen uns auf DICH!
+</p>
 </div>
-<div id="outline-container-org20be8fb" class="outline-2">
-<h2 id="org20be8fb">Gruppenstunden</h2>
-<div class="outline-text-2" id="text-org20be8fb">
+</div>
+<div id="outline-container-org51a47c7" class="outline-2">
+<h2 id="org51a47c7">Gruppenstunden</h2>
+<div class="outline-text-2" id="text-org51a47c7">
 <ul class="org-ul">
 <li>Wölflinge (ab 6 Jahren): Dienstag  17:30 - 19:00 Uhr</li>
 <li>Rover (ab 15 Jahren): Donnerstag  20:30 - 22:00 Uhr</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf66eea8" class="outline-2">
-<h2 id="orgf66eea8">Anmeldung</h2>
-<div class="outline-text-2" id="text-orgf66eea8">
+<div id="outline-container-org0478cfe" class="outline-2">
+<h2 id="org0478cfe">Anmeldung</h2>
+<div class="outline-text-2" id="text-org0478cfe">
 <p>
 Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte Version an die E-Mail-Adresse.
 </p>
@@ -255,22 +267,22 @@ Hier könnt Ihr euch die Anmeldung herunterladen. Bitte schickt die augefüllte 
 </p>
 </div>
 </div>
-<div id="outline-container-org2a6c958" class="outline-2">
-<h2 id="org2a6c958"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
+<div id="outline-container-orged753f5" class="outline-2">
+<h2 id="orged753f5"><a href="Datenschutzerklärung.html">Datenschutzerklärung</a></h2>
 </div>
 
 
-<div id="outline-container-org9834038" class="outline-2">
-<h2 id="org9834038">Kontakt</h2>
-<div class="outline-text-2" id="text-org9834038">
+<div id="outline-container-org023507e" class="outline-2">
+<h2 id="org023507e">Kontakt</h2>
+<div class="outline-text-2" id="text-org023507e">
 <p>
 stamm.pius@dpsg-eichstaett.de
 </p>
 </div>
 </div>
-<div id="outline-container-orgad2c959" class="outline-2">
-<h2 id="orgad2c959">Impressum</h2>
-<div class="outline-text-2" id="text-orgad2c959">
+<div id="outline-container-org52ffb67" class="outline-2">
+<h2 id="org52ffb67">Impressum</h2>
+<div class="outline-text-2" id="text-org52ffb67">
 <p>
 Angaben gemäß § 5 TMG
 </p>
@@ -299,7 +311,7 @@ Adresse des Stammesvorstands
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: DPSG Stamm St. Pius Ingolstadt</p>
-<p class="date">Created: 2024-02-18 So 10:32</p>
+<p class="date">Created: 2024-03-11 Mo 10:35</p>
 </div>
 </body>
 </html>
